tests/snapshots/arg__action_help.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_8d61f119'
[1m[4mUsage:[0m [1mprog[0m

[1m[4mOptions:[0m
      [1m--flag[0m  
  [1m-h[0m, [1m--help[0m  Print help
EOF_8d61f119
exit 0
