tests/snapshots/arg__action_help_long.snap
---
source: tests/arg.rs
expression: output
---
command cat <<'EOF_8d61f119'
[1m[4mUsage:[0m [1mprog[0m

[1m[4mOptions:[0m
      [1m--flag[0m  
  [1m-h[0m, [1m--help[0m  Print help
EOF_8d61f119
exit 0
