tests/snapshots/arg__conflicts_with.snap
---
source: tests/arg.rs
expression: output
---
command cat <<'EOF_285fe05b'
[1m[31merror:[0m the argument '[33m--debug[0m' cannot be used with '[33m--config <cfg>[0m'

[1m[4mUsage:[0m [1mprog[0m [1m--debug[0m

For more information, try '[1m--help[0m'.
EOF_285fe05b
exit 1
