tests/snapshots/arg__conflicts_with_all.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_a72bcec1'
[1m[31merror:[0m the argument '[33m--config <cfg>[0m' cannot be used with '[33m[input][0m'

[1m[4mUsage:[0m [1mprog[0m [1m--config[0m <cfg> [input]

For more information, try '[1m--help[0m'.
EOF_a72bcec1
exit 1
