tests/snapshots/arg__default_value_if_equals-1.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_opt='special'
claptrap_other='default'
