tests/snapshots/arg__default_value_if_present.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_flag='true'
claptrap_other='default'
