tests/snapshots/arg__default_value_ifs-1.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_opt='channel'
claptrap_flag='false'
claptrap_other='chan'
