tests/snapshots/arg__default_value_ifs.snap
---
source: tests/arg.rs
expression: output1
---
claptrap_opt='channel'
claptrap_flag='false'
claptrap_other='chan'
