tests/snapshots/arg__default_value_ifs_order.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_opt='channel'
claptrap_flag='true'
claptrap_other='default'
