tests/snapshots/arg__default_values-2.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
claptrap_opt=('non_default' 'another_value')
