tests/snapshots/arg__display_order.snap
---
source: tests/arg.rs
expression: "util::run(spec, args)"
---
command cat <<'EOF_2ecc72db'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
  [1m-a[0m, [1m--airplane[0m <airplane>  I should be first!
  [1m-b[0m, [1m--boat[0m <boat>          Some help and text
  [1m-?[0m                         Alt help
  [1m-h[0m, [1m--help[0m                 Print help
EOF_2ecc72db
exit 0
